Arrelgo en comando de pipeline npx a npm

--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -28,9 +28,7 @@ jobs:
 
       # 🧪 Unit Tests (Jest)
       - name: 🧪 Ejecutar pruebas unitarias
-        run: |
-          chmod +x ./node_modules/.bin/jest
-          npx jest --passWithNoTests
+        run: npm test
 
       # 🧩 Escaneo SAST con Semgrep
       - name: 🔒 Escaneo estático con Semgrep
