--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   security_pipeline:
     runs-on: ubuntu-latest
-
     steps:
       - name: 📦 Checkout del repositorio
         uses: actions/checkout@v4
@@ -22,21 +21,19 @@ jobs:
       - name: 📥 Instalar dependencias
         run: npm install
 
-      # 🔍 Linting
       - name: 🧹 Ejecutar ESLint
         run: npx eslint . --ext .js,.ts || true
 
-      # 🧪 Unit Tests (Jest)
       - name: 🧪 Ejecutar pruebas unitarias
-        run: npm test
+        run: |
+          chmod +x ./node_modules/.bin/jest
+          npx jest --passWithNoTests
 
-      # 🧩 Escaneo SAST con Semgrep
       - name: 🔒 Escaneo estático con Semgrep
         uses: returntocorp/semgrep-action@v1
         with:
           config: "p/ci"
 
-      # ⚙️ Escaneo de vulnerabilidades con Snyk
       - name: 🧠 Snyk Security Scan
         uses: snyk/actions/node@master
         env:
@@ -44,3 +41,28 @@ jobs:
         continue-on-error: true
         with:
           args: --all-projects --detection-depth=4
+
+  build_and_scan_container:
+    needs: security_pipeline
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📦 Checkout del repositorio
+        uses: actions/checkout@v4
+
+      - name: 🐋 Iniciar sesión en Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: 🔨 Construir imagen Docker
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
+
+      - name: 🔍 Escaneo de vulnerabilidades con Anchore Grype
+        uses: anchore/scan-action@v4
+        with:
+          image: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
+          fail-build: false   # para no detener el pipeline
