--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "laboratorio5",
   "version": "1.0.0",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "*",
     "socket.io": "*"
   },
@@ -15,8 +16,8 @@
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
-    "typescript-eslint": "^8.46.3",
-    "supertest": "^7.1.0"
+    "supertest": "^7.1.0",
+    "typescript-eslint": "^8.46.3"
   },
   "jest": {
     "testEnvironment": "node",
