feat: Implement complete monitoring system for chat application
- Added OpenTelemetry for distributed tracing with OTLP exporter.
- Integrated Prometheus for metrics collection and monitoring.
- Implemented a logging system using Winston with alerting via webhook.
- Enhanced server.js with middleware for logging, metrics, and error handling.
- Created metrics.js for custom metrics tracking (HTTP requests, socket connections, chat messages).
- Developed logger.js for structured logging and alerting.
- Introduced test-load.js for load testing the application.
- Added graceful shutdown handling for the server.
- Updated package.json with new dependencies for monitoring and logging.

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ package-lock.json
 # Variables de entorno (contiene secretos)
 .env
 
-# Logs
+# Logs y archivos de monitoreo
 *.log
 npm-debug.log*
+logs/
+*.log.*
 
 # Archivos del sistema
 .DS_Store
