--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "name": "laboratorio5",
   "version": "1.0.0",
   "dependencies": {
+    "@opentelemetry/auto-instrumentations-node": "^0.67.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "*",
-    "socket.io": "*"
+    "prom-client": "^15.1.3",
+    "socket.io": "*",
+    "winston": "^3.18.3"
   },
   "scripts": {
     "start": "node server.js",
