Corregir todos los errores de ESLint y activar validación estricta en pipeline

--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -19,10 +19,10 @@ jobs:
           node-version: 20
 
       - name: 📥 Instalar dependencias
-        run: npm install
+        run: npm ci
 
       - name: 🧹 Ejecutar ESLint
-        run: npx eslint . --ext .js,.ts --max-warnings 0
+        run: npx eslint . --ext .js,.ts
 
       - name: 🧪 Ejecutar pruebas unitarias
         run: npm test
