--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "test", "master" ]
 
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 jobs:
   security_pipeline:
     runs-on: ubuntu-latest
