--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -1,4 +1,4 @@
-name: 🛡️ Seguridad y Calidad del Código
+name: 🛡️ Security Pipeline
 
 on:
   push:
@@ -12,27 +12,26 @@ permissions:
   actions: read
 
 jobs:
-  security_pipeline:
+  code_analysis:
+    name: Code Quality & Security
     runs-on: ubuntu-latest
     steps:
-      - name: 📦 Checkout del repositorio
-        uses: actions/checkout@v4
-
-      - name: 🟢 Configurar Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
 
-      - name: 📥 Instalar dependencias
-        run: npm ci
+      - run: npm ci
 
-      - name: 🧹 Ejecutar ESLint
+      - name: ESLint
         run: npx eslint . --ext .js,.ts
 
-      - name: 🧪 Ejecutar pruebas unitarias
+      - name: Unit Tests
         run: npm test
 
-      - name: 🔒 Escaneo estático con Semgrep
+      - name: Semgrep SAST
         uses: returntocorp/semgrep-action@v1
         with:
           config: >-
@@ -40,46 +39,41 @@ jobs:
             p/security-audit
             p/javascript
 
-      - name: 🧠 Snyk Security Scan
+      - name: Snyk Scan
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --severity-threshold=critical --sarif-file-output=snyk.sarif
 
-      - name: 📤 Upload Snyk SARIF to GitHub Security
+      - name: Upload SARIF to Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: snyk.sarif
 
-      - name: 📤 Upload Snyk report as artifact
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: snyk-report
-          path: snyk.sarif
-
-  build_and_scan_container:
-    needs: security_pipeline
+  container_security:
+    name: Container Scan
+    needs: code_analysis
     runs-on: ubuntu-latest
     steps:
-      - name: 📦 Checkout del repositorio
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: 🐋 Iniciar sesión en Docker Hub
+      - name: Docker Login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 🔨 Construir imagen Docker
+      - name: Build & Push
         uses: docker/build-push-action@v5
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/una-chat:buildcache
+          cache-to: type=inline
 
-      - name: 🔍 Escaneo de vulnerabilidades con Anchore Grype
+      - name: Grype Scan
         uses: anchore/scan-action@v4
         with:
           image: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
@@ -87,16 +81,8 @@ jobs:
           severity-cutoff: critical
           output-format: sarif
 
-      - name: 📤 Upload Grype SARIF report
+      - name: Upload SARIF
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: results.sarif
-
-      - name: 📊 Generar reporte de vulnerabilidades (tabla)
-        uses: anchore/scan-action@v4
-        if: always()
-        with:
-          image: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
-          fail-build: false
-          output-format: table
