--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -1,4 +1,4 @@
-name: 🛡️ Security Pipeline
+name: Pipeline de Seguridad
 
 on:
   push:
@@ -12,26 +12,29 @@ permissions:
   actions: read
 
 jobs:
-  code_analysis:
-    name: Code Quality & Security
+  analisis_codigo:
+    name: Analisis de Codigo y Seguridad
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout del codigo
+        uses: actions/checkout@v4
       
-      - uses: actions/setup-node@v4
+      - name: Configurar Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
 
-      - run: npm ci
+      - name: Instalar dependencias
+        run: npm ci
 
-      - name: ESLint
+      - name: Ejecutar ESLint
         run: npx eslint . --ext .js,.ts
 
-      - name: Unit Tests
+      - name: Ejecutar tests unitarios
         run: npm test
 
-      - name: Semgrep SAST
+      - name: Semgrep - Analisis estatico
         uses: returntocorp/semgrep-action@v1
         with:
           config: >-
@@ -39,33 +42,41 @@ jobs:
             p/security-audit
             p/javascript
 
-      - name: Snyk Scan
+      - name: Snyk - Escaneo de dependencias
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=critical --sarif-file-output=snyk.sarif
+          args: --severity-threshold=critical --all-projects --detection-depth=4 --sarif-file-output=snyk.sarif
 
-      - name: Upload SARIF to Security
+      - name: Subir reporte SARIF a GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: snyk.sarif
 
-  container_security:
-    name: Container Scan
-    needs: code_analysis
+      - name: Guardar reporte Snyk como artefacto
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: snyk-report
+          path: snyk.sarif
+
+  escaneo_contenedor:
+    name: Construccion y Escaneo de Contenedor
+    needs: analisis_codigo
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout del codigo
+        uses: actions/checkout@v4
 
-      - name: Docker Login
+      - name: Login en Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push
+      - name: Construir y publicar imagen Docker
         uses: docker/build-push-action@v5
         with:
           push: true
@@ -73,7 +84,7 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/una-chat:buildcache
           cache-to: type=inline
 
-      - name: Grype Scan
+      - name: Grype - Escaneo de vulnerabilidades en contenedor
         uses: anchore/scan-action@v4
         with:
           image: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
@@ -81,8 +92,16 @@ jobs:
           severity-cutoff: critical
           output-format: sarif
 
-      - name: Upload SARIF
+      - name: Subir reporte Grype a GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: results.sarif
+
+      - name: Generar reporte de vulnerabilidades en tabla
+        uses: anchore/scan-action@v4
+        if: always()
+        with:
+          image: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
+          fail-build: false
+          output-format: table
