--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@sentry/node": "^10.23.0",
+    "@sentry/profiling-node": "^10.23.0",
     "dotenv": "^17.2.3",
     "express": "*",
     "socket.io": "*"
