--- a/.github/workflows/security-pipeline.yml
+++ b/.github/workflows/security-pipeline.yml
@@ -1,65 +1,89 @@
-name: 🛡️ Seguridad y Calidad del Código
+name: Pipeline de Seguridad
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: ["main", "master", "test"]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: ["main", "master"]
+
+permissions:
+  contents: read
+  security-events: write
+  actions: read
 
 jobs:
-  security_pipeline:
+  analisis_codigo:
+    name: Analisis de Codigo y Seguridad
     runs-on: ubuntu-latest
     steps:
-      - name: 📦 Checkout del repositorio
+      - name: Checkout del repositorio
         uses: actions/checkout@v4
 
-      - name: 🟢 Configurar Node.js
+      - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
 
-      - name: 📥 Instalar dependencias
-        run: npm install
+      - name: Instalar dependencias
+        run: npm ci
 
-      - name: 🧹 Ejecutar ESLint
-        run: npx eslint . --ext .js,.ts || true
+      - name: Ejecutar ESLint
+        run: npx eslint . --ext .js,.ts
 
-      - name: 🧪 Ejecutar pruebas unitarias
+      - name: Ejecutar pruebas unitarias
         run: npm test
 
-      - name: 🔒 Escaneo estático con Semgrep
+      - name: Escaneo estatico con Semgrep
         uses: returntocorp/semgrep-action@v1
         with:
           config: "p/ci"
+          generateSarif: true
 
-      - name: 🧠 Snyk Security Scan
+      - name: Subir resultados Semgrep a GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: semgrep.sarif
+          category: semgrep
+
+      - name: Analisis de dependencias con Snyk
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        continue-on-error: true
         with:
-          args: --all-projects --detection-depth=4
+          args: --severity-threshold=critical --sarif-file-output=snyk.sarif
 
-  build_and_scan_container:
-    needs: security_pipeline
+      - name: Subir resultados Snyk a GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: snyk.sarif
+          category: snyk
+
+  escaneo_contenedor:
+    name: Construccion y Escaneo de Contenedor
+    needs: analisis_codigo
     runs-on: ubuntu-latest
     steps:
-      - name: 📦 Checkout del repositorio
+      - name: Checkout del repositorio
         uses: actions/checkout@v4
 
-      - name: 🐋 Iniciar sesión en Docker Hub
+      - name: Iniciar sesion en Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 🔨 Construir imagen Docker
+      - name: Construir y publicar imagen Docker
         uses: docker/build-push-action@v5
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/una-chat:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/una-chat:buildcache,mode=max
 
-      - name: 🔍 Escaneo de vulnerabilidades con Anchore Grype
+      - name: Escaneo de vulnerabilidades con Grype
         uses: anchore/scan-action@v4
         with:
           image: ${{ secrets.DOCKERHUB_USERNAME }}/una-chat:development
