--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@sentry/node": "^10.23.0",
     "@sentry/profiling-node": "^10.23.0",
+    "axios": "^0.21.1",
     "dotenv": "^17.2.3",
     "express": "*",
+    "lodash": "^4.17.20",
     "socket.io": "*"
   },
   "scripts": {
